apps/web/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr

    spec:
      containers:
      - name: radarr
        # https://github.com/linuxserver/docker-radarr/releases/latest
        image: lscr.io/linuxserver/radarr:6.0.4.10291-ls290
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "5Gi"
            cpu: "3000m"
        ports:
        - containerPort: 7878
        volumeMounts:
        - name: config
          mountPath: /config
          subPath: radarr
        - name: media
          mountPath: /mnt/media
        - name: sabnzbd
          mountPath: /mnt/sabnzbd
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: radarr-media-pvc
      - name: sabnzbd
        persistentVolumeClaim:
          claimName: radarr-sabnzbd-pvc
      - name: config
        hostPath:
          path: /lxc-configs/radarr-config # This path contains the same files on all nodes 
          type: DirectoryOrCreate
