apps/web/radarr/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: media
  name: radarr
spec:
  entryPoints:
    - web
  routes:
    - match: ingress-route-match
      kind: Rule
      middlewares:
        - name: https-proto-media
        - name: authelia-forwardauth-media
      services:
        - name: radarr
          port: 80
